-fix some code smells