@@ -39,7 +39,7 @@ public class Paginated<T> {
     }
 
     public Paginated(PaginatedStream<T> stream) {
-        this(stream.getStream().collect(Collectors.toList()), stream.getTotalResults(), stream.getSize(), stream.getFrom());
+        this(stream.getStream().toList(), stream.getTotalResults(), stream.getSize(), stream.getFrom());
     }
 
     public Paginated(List<T> data, Long totalResults, long size, long from) {
